--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,4 +129,53 @@ nav{
     text-align: center;
 }
 
+/* flower-lover-section css */
+.flower-lover-items{
+    display: flex;
+    gap: 60px;
+    align-items: center;
+    position: relative;
+    margin-bottom: 100px;
+}
 
+.flower-lover-section-content h3{
+    font-size: 3.2rem;
+    margin-bottom: 20px;
+}
+
+.flower-lover-section-content li{
+    font-size: 1.4rem;
+    color: #8987A1;
+    margin-bottom: 20px;
+    padding-left: 20px;
+    list-style-type: disc;
+    margin-left: 25px;
+    
+
+}
+.flower-lover-image-icon {
+    width: 286px;
+    height: 286px;
+    position: absolute;
+    top: 282%;
+    left: 550px;
+}
+
+
+/* latest-deals-layout css */
+
+.latest-deals-layout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 28px;
+}
+.left-deal{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+ 
+}
+.left-deal img{
+    border-radius: 14px;
+}
