added latest deals section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,25 @@ nav{
 
 
 /* latest-deals-layout css */
+.latest-deals{
+    margin-bottom: 100px;
+}
 
+.latast-deals-content {
+    text-align: center;
+}
+.latast-deals-content h3{
+    font-size: 3.1rem;
+    margin-bottom: 16px;
+   
+}
+.latast-deals-content span{
+    color: #E95A08;
+}
+.latast-deals-content p{
+    margin-bottom: 120px;
+   
+}
 .latest-deals-layout{
     display: flex;
     justify-content: center;
@@ -173,9 +191,83 @@ nav{
 .left-deal{
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    
  
 }
-.left-deal img{
+.left-deal-img img{
+    border-radius: 14px;
+   
+}
+
+.left-deal-card{
+    position: relative;
+}
+.left-deal-card-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    text-align: center;
+}
+.left-deal-card-content h4{
+    text-align: center;
+    color: white;
+    font-size: 1.rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    
+}
+.left-deal-card-content a{
+    color: white;
+    font-weight: bold;
+}
+
+.left-deal-item{
+    position: relative;
+    margin: 20px 0px;
+}
+
+.left-deal-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.left-deal-content h4{
+    color: white;
+    font-size:1.1rem;
+    margin-bottom: 20px;
+}
+.left-deal-content a{
+    color: white;
+    
+}
+
+.right-deal{
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.right-deal-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.right-deal-content h3{
+    color: white;
+    font-size: 2.5rem;
+}
+.right-deal-content a{
+    color: white;
+    font-size: 1.7rem;
+}
+.right-deal-img img{
     border-radius: 14px;
 }
+
+
+
+
