--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@ body{
     margin: 0 auto;
 }
 
+.width{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
 
 
 
@@ -269,5 +274,86 @@ nav{
 }
 
 
+/* subscribe-us css */
+
+.subscribe-us{
+    width: 1440px;
+    background-image: url('../images/news-letter-bg.png');
+    text-align: center;
+    margin: 0 auto;
+    
+}
+.subscribe-us img{
+    width: 100%;
+}
+  .suscribe-content{
+    padding: 150px 0px;
+    margin: 0 auto;
+} 
+.subscribe-us h3{
+    font-size: 3.1rem;
+    color: white;
+    margin-bottom: 23px;
+    text-align: center;
+}
+
+.subscribe-email{
+    padding: 19px;
+    padding-right: 370px;
+    border: none;
+}
+.subscribe-submit{
+    padding: 19px 53px;
+    border: none;
+    color: white;
+    background-color: #E95A08;
+    margin-left: -3px;
+}
 
 
+/* footer section css */
+.footer-content{
+    display: flex;
+    padding: 50px 0px;
+    justify-content: space-around;
+    
+}
+.footer-brand{
+    width: 360px;
+}
+.footer-brand{
+  padding-top: 30px;
+}
+.footer-brand img{
+    margin-bottom: 16px;
+    /* text-align: center; */
+}
+.footer-brand p{
+    color: #8987A1;
+}
+.footer-nav-link li{
+    list-style: none;
+    padding: 25px 0px;
+}
+.footer-nav-link a{
+    text-decoration: none;
+    color: #8987A1;
+    
+}
+.footer-links li{
+    list-style: none;
+    padding: 25px 0px;
+}
+.footer-links a{
+    text-decoration: none;
+    color: #8987A1;
+}
+ 
+.footer-social-link img{
+   margin-left: 10px;
+}
+
+
+@media screen and (max-width: 576px) {
+    
+}
