--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
+h1,h2,h3,h4,h5{
+    font-family: "Noto Serif", serif;
+}
+p,span{
+    font-family: "Inter", sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -309,7 +318,7 @@ nav{
 }
 .right-deal-content h3{
     color: white;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 .right-deal-content a{
     color: white;
