--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ nav{
    }
    .hero-section{
     flex-direction: column-reverse;
-    
+    padding-bottom: 50px;
 
    }
    .hero-content{
@@ -486,13 +486,19 @@ nav{
         font-size: 1.2rem;
     }
     .right-deal img{
-        width: 100%;
+        /* width: 100%;
+        height: 100%; */
         padding: 0 30px;
         margin-top: -25px;
         /* border-radius: 20px; */
        
         
     }
+    .right-deal-img img {
+    border-radius: 50px;
+    width: 100%;
+    height: 100%;
+}
     .right-deal::before {
     position: absolute;
     bottom: 23px;
@@ -502,8 +508,9 @@ nav{
     content: "";
     background: #000;
     opacity: 30%;
-    /* border-radius: 30px; */
+    border-radius: 30px;
 }   .latest-deals{
+    
     margin-bottom: 50px;
 
 }
