--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ nav{
 
 /* our plants section css */
 .our-plants-section{
-    margin-bottom: 200px;
+    margin-bottom: 180px;
     position: relative;
 }
 .our-plants-title{
@@ -125,6 +125,7 @@ nav{
 
 .card-item{
     text-align: center;
+    margin-bottom: 20px;
 }
 .card-item img{
     margin-bottom: 30px;
@@ -228,10 +229,10 @@ nav{
 }
 .left-deal-card::before {
     position: absolute;
-    top: 0;
+    bottom: 3px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 98%;
     content: "";
     background: #000000;
     opacity: 30%;
@@ -263,10 +264,10 @@ nav{
 }
 .left-deal-item::before {
     position: absolute;
-    top: 0;
+    bottom: 4px;
     left: 0;
     content: "";
-    height: 100%;
+    height: 98%;
     width: 100%;
     background: #000;
     opacity: 30%;
@@ -330,7 +331,7 @@ nav{
 /* subscribe-us css */
 
 .subscribe-us{
-    width: 1440px;
+    /* width: 1440px; */
     background-image: url('../images/news-letter-bg.png');
     text-align: center;
     /* background-repeat: no-repeat; */
